@@ -1,4 +1,5 @@
 - do not set relatime option for mounting nfs
+- nicely adjust mtime of fontconfig cache files
 
 Version 10.4.183 - 31 August 2007, by Pascal "Pixel" Rigaux
 
